--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,26 @@
   text-align: center;
 }
 
+input {
+  padding: 0.5rem 0.5rem;
+  border: 1px solid black;
+  border-radius: 0.25rem;
+}
+.fade-enter {
+  opacity: 0;
+}
+.fade-enter-active {
+  opacity: 1;
+  transition: opacity 300ms;
+}
+.fade-exit {
+  opacity: 1;
+}
+.fade-exit-active {
+  opacity: 0;
+  transition: opacity 300ms;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
